--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="categories">Categories</string>
     <string name="see_more">See More</string>
     <string name="take_your_taste_buds_non_a_flavor_journey_with_us">Take your taste buds\non a flavor journey with us</string>
-    <string name="developer_email">info@hashmac.com</string>
+    <string name="developer_email">chathumiamarasinghe@gmail.com.com</string>
     <string name="user_name">User Name</string>
     <string name="share_your_nmasterpiece_with_the_world">Share your magic\nmasterpiece with the World</string>
     <string name="satisfy_your_cravings_nwith_just_a_tap_recipe_app">Satisfy your cravings\nwith just a tap - Recipe App</string>
@@ -30,8 +30,8 @@
     <string name="view_more_apps">View More Apps developed by us</string>
     <string name="send_feedback">Share your feedback to improve our app</string>
     <string name="privacy_policy">Visit our Privacy Policy</string>
-    <string name="developer_name">HashMac</string>
-    <string name="developer_id">the_hashmac</string>
+    <string name="developer_name">chathumi</string>
+    <string name="developer_id">chathumiamarasinghe</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="satisfy_your_ncravings_with_just_a_tap">Satisfy your\ncravings with just a tap</string>
