--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="satisfy_your_ncravings_with_just_a_tap">Satisfy your\ncravings with just a tap</string>
     <string name="favorites">Favorites</string>
     <string name="login_as_guest">Login as Guest</string>
+    <string name="default_web_client_id">1525126469-psprs9s2hpamg29t0887imtan14t9epg.apps.googleusercontent.com</string>
+
 </resources>
